--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -483,7 +483,7 @@ body, #headerwarp{
 }
 
 .slick-current .doctor-item .doctor-cir .img {
-    width: 470px; /* 수정*/
+    width: 400px; /* 수정*/
     height: 550px; /* 수정*/
     z-index: 1;/* 수정*/
 }
@@ -499,7 +499,7 @@ button.slick-prev, button.slick-next {
     margin: 0 15px; 
 }
 .doctor-item .doctor-cir .img {
-    width: 100%; /* 이미지를 부모 크기에 맞게 설정 */
+    width: 300px; /* 이미지를 부모 크기에 맞게 설정 */
     height: 100%; /* 이미지를 부모 크기에 맞게 설정 */
 }
 @for $i from 1 through 7 {
@@ -510,7 +510,9 @@ button.slick-prev, button.slick-next {
         background-repeat: no-repeat;
     }
 }
-
+.slick-arrow::before{
+    background-color: #F17522 !important
+}
 
 .slick-current .doctor-item .doctor-cir > span:nth-child(2) {
     -webkit-animation-delay: 0.3s;
@@ -535,7 +537,7 @@ button.slick-prev, button.slick-next {
 	}
 }
 
-
+//게시판 부분//
 #green19_82116 {
     height: 413px;;
     .boardHead{
@@ -579,3 +581,40 @@ button.slick-prev, button.slick-next {
     }
 }
 
+#green19_82324{
+    .box_ banArea{
+        display: flex;
+    
+    } 
+    .firstbanner-rightsection{
+        display: flex;
+        width: 960px;
+        height: 592px;
+        padding:
+        10px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        .rightsection {
+            display: flex;
+            align-items: center;
+            gap: 389px;
+        }
+        .rightsection_img{
+            display: flex;
+            width: 877px;
+            height: 287px;
+            align-items: center;
+            gap: 28px;
+            align-self: stretch;
+        }
+        .img1{
+            background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
+           
+        }
+        .img2{
+            background: url("https://juhyun88.github.io/iweb_src/first_banner/Rrbg.jpg") center/cover no-repeat;
+        }
+    }
+}
