[첫번째배너]재수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -574,7 +574,7 @@ button.slick-prev, button.slick-next {
   top: -3px;
 }
 
-#green19_82324 .box_ banArea {
+#green19_82324 .banArea {
   display: flex;
 }
 #green19_82324 .firstbanner-rightsection {
