--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -582,7 +582,7 @@ button.slick-prev, button.slick-next {
 }
 
 #green19_82324{
-    .box_ banArea{
+    .banArea{
         display: flex;
     
     } 
