[첫번째배너]수정2

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -599,22 +599,36 @@ button.slick-prev, button.slick-next {
         .rightsection {
             display: flex;
             align-items: center;
-            gap: 389px;
+            justify-content: space-between;
         }
         .rightsection_img{
-            display: flex;
-            width: 877px;
-            height: 287px;
+            display: flex !important;
+            width: 877px !important;
+            height: 287px !important;
             align-items: center;
             gap: 28px;
             align-self: stretch;
         }
         .img1{
             background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
-           
+            width: 430px !important;
+            height: 287px !important;
         }
         .img2{
             background: url("https://juhyun88.github.io/iweb_src/first_banner/Rrbg.jpg") center/cover no-repeat;
+            width: 430px !important;
+            height: 287px !important;
+        }
+        .slick-list{
+            display: flex !important;
+            margin:0;
+            padding:0;
+            width: 750px !important;
+            height: 40px !important;
+           
+        }
+        .slick-track {
+            width: auto !important;
         }
     }
 }
