--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -589,19 +589,33 @@ button.slick-prev, button.slick-next {
 #green19_82324 .firstbanner-rightsection .rightsection {
   display: flex;
   align-items: center;
-  gap: 389px;
+  justify-content: space-between;
 }
 #green19_82324 .firstbanner-rightsection .rightsection_img {
-  display: flex;
-  width: 877px;
-  height: 287px;
+  display: flex !important;
+  width: 877px !important;
+  height: 287px !important;
   align-items: center;
   gap: 28px;
   align-self: stretch;
 }
 #green19_82324 .firstbanner-rightsection .img1 {
   background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
+  width: 430px !important;
+  height: 287px !important;
 }
 #green19_82324 .firstbanner-rightsection .img2 {
   background: url("https://juhyun88.github.io/iweb_src/first_banner/Rrbg.jpg") center/cover no-repeat;
+  width: 430px !important;
+  height: 287px !important;
+}
+#green19_82324 .firstbanner-rightsection .slick-list {
+  display: flex !important;
+  margin: 0;
+  padding: 0;
+  width: 750px !important;
+  height: 40px !important;
+}
+#green19_82324 .firstbanner-rightsection .slick-track {
+  width: auto !important;
 }
