--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -590,20 +590,27 @@ button.slick-prev, button.slick-next {
         display: flex;
         width: 960px;
         height: 592px;
-        padding:
-        10px;
+        padding:10px;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-
+        background: #F9F1DE;
+        .rightsection_contanier{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 592px;
+        }
         .rightsection {
             align-items: center;
             justify-content: space-between;
             width: 740px; // 글자 사이즈 넓이
+            padding-bottom: 32px;
             
             span{
                 color: #000;
-                font-family: "Paperlogy 4 Regular";
+                font-family: "Paperlogy 5 Medium" !important;
                 font-size: 35px;
                 font-style: normal;
                 line-height: normal;
@@ -617,6 +624,11 @@ button.slick-prev, button.slick-next {
                 gap: 10px;
                 border-radius: 36px;
                 background: var(--Main, #F17522);
+                border: none;
+                color: white;
+                font-size: 17px;
+                font-family: Paperlogy;
+                font-family: "Paperlogy 3 Light";
             }
           
         }
@@ -651,6 +663,13 @@ button.slick-prev, button.slick-next {
         }
         .slick-slide .slick-active{
             width: auto !important;
+        }
+        button.slick-prev, button.slick-next {
+            z-index: 3; /* 슬라이드 네비게이션 버튼이 이미지보다 앞에 보이도록 설정 */
+            color: #F17522 !important; /* 화살표 색상 설정, !important 추가 */
+        }
+        .slick-arrow::before{
+            background-color: #F17522 !important
         }
     }
 }
