--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -516,6 +516,10 @@ button.slick-prev, button.slick-next {
   background-color: #F17522 !important;
 }
 
+.slick-arrow::after {
+  background-color: #F17522 !important;
+}
+
 .slick-current .doctor-item .doctor-cir > span:nth-child(2) {
   animation-delay: 0.3s;
 }
@@ -589,10 +593,10 @@ button.slick-prev, button.slick-next {
 }
 #green19_82324 .firstbanner-rightsection .rightsection_contanier {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 592px;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  height: 592px !important;
 }
 #green19_82324 .firstbanner-rightsection .rightsection {
   align-items: center;
