--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -513,6 +513,9 @@ button.slick-prev, button.slick-next {
 .slick-arrow::before{
     background-color: #F17522 !important
 }
+.slick-arrow::after{
+    background-color: #F17522 !important
+}
 
 .slick-current .doctor-item .doctor-cir > span:nth-child(2) {
     -webkit-animation-delay: 0.3s;
@@ -597,10 +600,10 @@ button.slick-prev, button.slick-next {
         background: #F9F1DE;
         .rightsection_contanier{
             width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            height: 592px;
+            display: flex !important;
+            flex-direction: column !important;
+            justify-content: center !important;
+            height: 592px !important;
         }
         .rightsection {
             align-items: center;
