--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -646,20 +646,25 @@ button.slick-prev, button.slick-next {
             align-self: stretch;
             position: relative;
 
-            .img1 {
-                background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
+            .img1,
+            .img2 {
                 width: 356px !important;
                 height: 287px !important;
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+
+            .img1 {
+                background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
             }
 
             .img2 {
                 background: url("https://juhyun88.github.io/iweb_src/first_banner/Rrbg.jpg") center/cover no-repeat;
-                width: 356px !important;
-                height: 287px !important;
             }
 
-            .left-button,
-            .right-button {
+            .slick-prev,
+            .slick-next {
                 position: absolute;
                 top: 50%;
                 transform: translateY(-50%);
@@ -676,13 +681,14 @@ button.slick-prev, button.slick-next {
                 font-size: 20px;
                 font-weight: bold;
                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+                z-index: 10;
             }
 
-            .left-button {
+            .slick-prev {
                 left: -60px;
             }
 
-            .right-button {
+            .slick-next {
                 right: -60px;
             }
         }
