--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -648,7 +648,9 @@ button.slick-prev, button.slick-next {
             position: relative;
 
             .img1,
-            .img2 {
+            .img2,
+            .img3,
+            .img4 {
                 width: 356px !important;
                 height: 287px !important;
                 background-size: cover;
