--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -609,8 +609,9 @@ button.slick-prev, button.slick-next {
         .rightsection {
             align-items: center;
             justify-content: space-between;
-            width: 740px; // 글자 사이즈 넓이
+            width: 660px; // 글자 사이즈 넓이
             padding-bottom: 32px;
+            padding-left: 98px;
 
             span {
                 color: #000;
@@ -628,11 +629,10 @@ button.slick-prev, button.slick-next {
                 align-items: center;
                 gap: 10px;
                 border-radius: 36px;
-                background: var(--Main, #F17522);
-                border: none;
-                color: white;
+                background: rgba(0, 0, 0, 0);
+                border: 2px solid;
+                color: #F17522;
                 font-size: 17px;
-                font-family: Paperlogy;
                 font-family: "Paperlogy 3 Light";
             }
         }
@@ -675,24 +675,31 @@ button.slick-prev, button.slick-next {
                 transform: translateY(-50%);
                 width: 50px;
                 height: 50px;
-                background-color: var(--Main, #F17522);
-                border: none;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                cursor: pointer;
-                color: white;
-                font-size: 20px;
-                font-weight: bold;
-                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-                z-index: 10;
+            }
+            .slick-arrow.slick-prev::after{
+                left: -63px !important;
+                width: 2px !important ;
+                background-color: #f17522 !important;
+            }
+            .slick-arrow.slick-next::after{
+                left: 30% !important;
+                background-color: #f17522 !important;
+            }
+            .slick-arrow.slick-prev::before{
+                left: -63px !important;
+                width: 2px !important ;
+                background-color: #f17522 !important;
+            }
+            .slick-arrow.slick-next::before{
+                left: 30% !important;
+                background-color: #f17522 !important;
             }
         }
 
         .slick-list {
             margin: 0;
             padding: 0;
-            width: 750px !important;
+            width: 655px !important;
             overflow: hidden !important;
         }
 
@@ -704,7 +711,7 @@ button.slick-prev, button.slick-next {
         .slick-slide .slick-active {
             width: auto !important;
         }
-        slick-prev {
+        .slick-prev {
             left: -5px; /* 화살표 위치 조정 */
         }
 
