--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -661,11 +661,11 @@ button.slick-prev, button.slick-next {
                 background: url("https://juhyun88.github.io/iweb_src/first_banner/Rrbg.jpg") center/cover no-repeat;
             }
             .img3 {
-                background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
+                background: url("https://juhyun88.github.io/iweb_src/first_banner/medical.jpg") center/cover no-repeat;
             }
 
             .img4 {
-                background: url("https://juhyun88.github.io/iweb_src/first_banner/Rrbg.jpg") center/cover no-repeat;
+                background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
             }
 
             .slick-prev,
@@ -712,7 +712,10 @@ button.slick-prev, button.slick-next {
             width: auto !important;
         }
         .slick-prev {
-            left: -5px; /* 화살표 위치 조정 */
+            left: 7px; /* 화살표 위치 조정 */
+        }
+        .slick-prev .slick-arrow {
+            left: 50px; /* 화살표 위치 조정 */
         }
 
         .slick-next {
@@ -720,4 +723,97 @@ button.slick-prev, button.slick-next {
         }
     }
 }
+
+
+.youtobe_section_img {
+    width: 1609px;
+    height: 302px;
+    gap:57px;
+    margin-top: 60px;
+    position: relative;
+
+    .img1,
+    .img2,
+    .img3,
+    .img4,
+    .img5 {
+        width: 317px !important;
+        height: 260px !important;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .img1 {
+        background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe1.jpg") center/cover no-repeat;
+    }
+
+    .img2 {
+        background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe2.jpg") center/cover no-repeat;
+    }
+    .img3 {
+        background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe3.jpg") center/cover no-repeat;
+    }
+
+    .img4 {
+        background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe4.jpg") center/cover no-repeat;
+    }
+    .img5 {
+        background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe1.jpg") center/cover no-repeat;
+    }
+
+    .slick-prev,
+    .slick-next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 50px;
+        height: 50px;
+    }
+    .slick-arrow.slick-prev::after{
+        left: -63px !important;
+        width: 2px !important ;
+        background-color: #f17522 !important;
+    }
+    .slick-arrow.slick-next::after{
+        left: 30% !important;
+        background-color: #f17522 !important;
+    }
+    .slick-arrow.slick-prev::before{
+        left: -63px !important;
+        width: 2px !important ;
+        background-color: #f17522 !important;
+    }
+    .slick-arrow.slick-next::before{
+        left: 30% !important;
+        background-color: #f17522 !important;
+    }
+}
+
+.slick-list {
+    margin: 0;
+    padding: 0;
+    width: 655px !important;
+    overflow: hidden !important;
+}
+
+.slick-track {
+    display: flex !important;
+    width: auto !important;
+}
+
+.slick-slide .slick-active {
+    width: auto !important;
+}
+.slick-prev {
+    left: 7px; /* 화살표 위치 조정 */
+}
+.slick-prev .slick-arrow {
+    left: 50px; /* 화살표 위치 조정 */
+}
+
+.slick-next {
+    right: -5px; /* 화살표 위치 조정 */
+}
+
 
